--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "rocky/build-view",
+  "name": "rockys/build-view",
   "description": "ThinkPhP 基于layui构建视图增删改查",
   "type": "think-build-view",
   "keywords": [
