--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": ">=5.6.0"
+    "php": ">=5.6.0",
+    "phpoffice/phpspreadsheet": "^1.3"
   },
   "autoload": {
     "psr-4": {
