--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,9 @@
     "phpoffice/phpspreadsheet": "^1.3"
   },
   "autoload": {
+    "files": [
+      "src/common.php"
+    ],
     "psr-4": {
       "buildView\\": "src"
     }
