修改composer注册服务

--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,12 @@
     "psr-4": {
       "buildView\\": "src"
     }
+  },
+  "extra": {
+    "think": {
+      "services": [
+        "buildView\\RegisterService"
+      ]
+    }
   }
 }
