--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
   "minimum-stability": "dev",
   "require": {
     "php": ">=5.6.0",
-    "phpoffice/phpspreadsheet": "^1.3"
+    "phpoffice/phpspreadsheet": "^1.3",
+    "aliyuncs/oss-sdk-php": "^2.3"
   },
   "autoload": {
     "files": [
